fix for chrome mobile white space at bottom

--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ body{
     background-color: white;
 }
 
+/* fix for chrome mobile showing white space  */
+html,body {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
+
 a{
     text-decoration: none;
 }
